# flarelette-jwt-kit

./: .gitattributes  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  404.html  CONTRIBUTING.md  ENHANCEMENT_JWKS_HTTP.md  ENHANCEMENT_JWKS_HTTP_feedback.md  IMPLEMENTATION_SUMMARY.md  Makefile  PYTHON_IMPLEMENTATION_SUMMARY.md  QUICKREF.md  README.md  RELEASE_CHECKLIST.md  SETUP.md  THIRD_PARTY_LICENSES.md  eslint.config.js  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  security.md  sitemap.xml  usage.md  vitest.config.ts
.github/: .release-please-manifest.json  COPILOT_INSTRUCTIONS.md  release-please-config.json
.github/workflows/: cd.yml  ci.yml  ci.yml.example  dependency-review.yml  docs-deploy-manual.yml  docs.yml  manual-publish.yml  release.yml
architecture/: flarelette-jwt-kit-ir.json  flarelette-jwt-kit.dsl  index.html
architecture/chrislyons_dev_flarelette_jwt/: index.html
architecture/chrislyons_dev_flarelette_jwt__adapters/: index.html
architecture/chrislyons_dev_flarelette_jwt__core/: index.html
architecture/chrislyons_dev_flarelette_jwt__explicit/: index.html
architecture/chrislyons_dev_flarelette_jwt__jwks/: index.html
architecture/chrislyons_dev_flarelette_jwt__main/: index.html
architecture/chrislyons_dev_flarelette_jwt__types/: index.html
architecture/chrislyons_dev_flarelette_jwt__util/: index.html
architecture/chrislyons_dev_flarelette_jwt__verify/: index.html
architecture/diagrams/mermaid/: structurizr-Classes_chrislyons_dev_flarelette_jwt__adapters.mmd  (+10 more)
architecture/flarelette_jwt/: index.html
architecture/flarelette_jwt__adapters/: index.html
architecture/flarelette_jwt__explicit/: index.html
architecture/flarelette_jwt__flarelette_jwt/: index.html
architecture/flarelette_jwt__util/: index.html
cloudflare-workers/: index.html
core-concepts/: index.html
docs/: CODING_STANDARDS.md  ENGINEERING_DISCIPLINE.md  QUICKREF.md  RELEASING.md  SETUP.md  TESTING.md  archlette.config.yaml  cloudflare-workers.md  core-concepts.md  explicit-config.md  flarelette-stack.md  getting-started.md  index.md  quick-start-demo.md  requirements.txt  security-guide.md  security.md  service-delegation.md  usage-guide.md  usage.md
docs/architecture/: .pages  README.md  archlette.config.yaml  chrislyons_dev_flarelette_jwt.md  chrislyons_dev_flarelette_jwt__adapters.md  chrislyons_dev_flarelette_jwt__core.md  chrislyons_dev_flarelette_jwt__explicit.md  chrislyons_dev_flarelette_jwt__jwks.md  chrislyons_dev_flarelette_jwt__main.md  chrislyons_dev_flarelette_jwt__src.md  chrislyons_dev_flarelette_jwt__types.md  chrislyons_dev_flarelette_jwt__util.md  chrislyons_dev_flarelette_jwt__verify.md  flarelette-jwt-kit-ir.json  flarelette-jwt-kit.dsl  flarelette_jwt.md  flarelette_jwt__adapters.md  flarelette_jwt__explicit.md  flarelette_jwt__flarelette_jwt.md  flarelette_jwt__flarelette_jwt_py.md  flarelette_jwt__util.md
docs/stylesheets/: extra.css
docs/user-guide/: core-concepts.md  explicit-config.md  quick-start-demo.md  service-delegation.md  usage-guide.md
examples/: .env.consumer.eddsa.example  .env.consumer.hs512.example  .env.eddsa.consumer.example  .env.eddsa.producer.example  .env.hs512.consumer.example  .env.producer.eddsa.example  .env.producer.hs512.example  eddsa.consumer.example.toml  eddsa.consumer.example.ts  eddsa.producer.example.toml  eddsa.producer.example.ts  explicit-config-example.ts
explicit-config/: index.html
getting-started/: index.html
quick-start-demo/: index.html
schemas/: flarelette-jwt.profile.schema.json
scripts/: generate-licenses.mjs  inspect-pack-py.js  inspect-pack-ts.js
search/: search_index.json
security-guide/: index.html
service-delegation/: index.html
usage-guide/: index.html
user-guide/core-concepts/: index.html
user-guide/explicit-config/: index.html
user-guide/quick-start-demo/: index.html
user-guide/service-delegation/: index.html
user-guide/usage-guide/: index.html
(+46 files in other folders)
