
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flarelette-jwt-kit-env"
version = "1.6.0"
description = "Env-driven JWT kit: HS512 default, optional EdDSA via env (Node & Python)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Chris Lyons" }]
requires-python = ">=3.11"
dependencies = []
